Cleaned up all html files

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
         <div class="col-md-12" style="padding:0">
             <img src="images/home-banner.JPG" alt="example-image" class="img-responsive">
         </div>
-        <div ng-view></div>
+        <div ng-view class="col-md-12"></div>
         <br><hr>
         <div style="text-align:center;font-size:10px;color:gray">2013</div>
         <br>
