--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,8 @@
         <script src="scripts/controllers\contactViewController.js"></script>
         <script src="scripts/controllers\resumeViewController.js"></script>
         <script src="scripts/directives\navigation.js"></script>
+        <script src="scripts/controllers\videoViewController.js"></script>
+        <script src="scripts/controllers\photoViewController.js"></script>
         <!-- endbuild -->
 </body>
 </html>
