--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
         <script src="scripts/controllers\homeViewController.js"></script>
         <script src="scripts/controllers\contactViewController.js"></script>
         <script src="scripts/controllers\resumeViewController.js"></script>
+        <script src="scripts/controllers\navigationController.js"></script>
         <script src="scripts/directives\navigation.js"></script>
         <script src="scripts/controllers\videoViewController.js"></script>
         <script src="scripts/controllers\photoViewController.js"></script>
