--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="styles/42c91542.main.css">
+        <link rel="stylesheet" href="styles/3da1a1c4.main.css">
 </head>
   <body ng-app="PersonalWebsiteAngularApp">
     <!--[if lt IE 7]>
@@ -24,7 +24,16 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+    <div class="container">
+        <navigation></navigation>
+        <div class="col-md-12" style="padding:0">
+            <img src="images/home-banner.JPG" alt="example-image" class="img-responsive">
+        </div>
+        <div ng-view="" class="col-md-12"></div>
+        <br><hr>
+        <div style="text-align:center;font-size:10px;color:gray">2013</div>
+        <br>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -44,6 +53,6 @@
 
         <script src="scripts/9e831593.modules.js"></script>
 
-        <script src="scripts/80a24a6e.scripts.js"></script>
+        <script src="scripts/f32db1cd.scripts.js"></script>
 </body>
 </html>
