Final touchups to disclaimer messages and footer copyright

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
         </div>
         <div ng-view class="col-md-12"></div>
         <br><hr>
-        <div style="text-align:center;font-size:10px;color:gray">2013</div>
+        <div style="text-align:center;font-size:10px;color:gray">© 2012-2013 Zhihao Mai. All Rights Reserved.</div>
         <br>
     </div>
 
