--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div ng-view="" class="col-md-12"></div>
         <br><hr>
-        <div style="text-align:center;font-size:10px;color:gray">2013</div>
+        <div style="text-align:center;font-size:10px;color:gray">© 2012-2013 Zhihao Mai. All Rights Reserved.</div>
         <br>
     </div>
 
@@ -53,6 +53,6 @@
 
         <script src="scripts/9e831593.modules.js"></script>
 
-        <script src="scripts/83539ca1.scripts.js"></script>
+        <script src="scripts/9fbd3f92.scripts.js"></script>
 </body>
 </html>
