--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
         <script src="scripts/directives\navigation.js"></script>
         <script src="scripts/controllers\videoViewController.js"></script>
         <script src="scripts/controllers\photoViewController.js"></script>
+        <script src="scripts/services/photoService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
