Update to header views, resume display, and photo hookup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="styles/ba86032b.main.css">
+        <link rel="stylesheet" href="styles/df1633d4.main.css">
 </head>
   <body ng-app="PersonalWebsiteAngularApp">
     <!--[if lt IE 7]>
@@ -31,7 +31,7 @@
         </div>
         <div ng-view="" class="col-md-12"></div>
         <br><hr>
-        <div style="text-align:center;font-size:10px;color:gray">© 2012-2013 Zhihao Mai. All Rights Reserved.</div>
+        <div class="footer-label">© 2012-2013 Zhihao Mai. All Rights Reserved.</div>
         <br>
     </div>
 
@@ -53,6 +53,6 @@
 
         <script src="scripts/9e831593.modules.js"></script>
 
-        <script src="scripts/9fbd3f92.scripts.js"></script>
+        <script src="scripts/b4219be8.scripts.js"></script>
 </body>
 </html>
