Started implementing Blog Page UI

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src="scripts/controllers\videoViewController.js"></script>
         <script src="scripts/controllers\photoViewController.js"></script>
         <script src="scripts/services/photoService.js"></script>
+        <script src="scripts/controllers\blogViewController.js"></script>
         <!-- endbuild -->
 </body>
 </html>
