--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
         <script src="scripts/controllers\photoViewController.js"></script>
         <script src="scripts/services/photoService.js"></script>
         <script src="scripts/controllers\blogViewController.js"></script>
+        <script src="scripts/services\blogService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
