Blog Post Implementation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="styles/72bdb7aa.main.css">
+        <link rel="stylesheet" href="styles/0b2661e3.main.css">
 </head>
   <body ng-app="PersonalWebsiteAngularApp">
     <!--[if lt IE 7]>
@@ -53,6 +53,18 @@
 
         <script src="scripts/9e831593.modules.js"></script>
 
-        <script src="scripts/6bfb8b21.scripts.js"></script>
+        <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/app.js"></script>
+        <script src="scripts/controllers\homeViewController.js"></script>
+        <script src="scripts/controllers\contactViewController.js"></script>
+        <script src="scripts/controllers\resumeViewController.js"></script>
+        <script src="scripts/controllers\navigationController.js"></script>
+        <script src="scripts/directives\navigation.js"></script>
+        <script src="scripts/controllers\videoViewController.js"></script>
+        <script src="scripts/controllers\photoViewController.js"></script>
+        <script src="scripts/services/photoService.js"></script>
+        <script src="scripts/controllers\blogViewController.js"></script>
+        <script src="scripts/services\blogService.js"></script>
+        <!-- endbuild -->
 </body>
 </html>
