updating website after a few months

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Zhihao Mai's Homepage</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="styles/c0b6b70f.main.css">
+        <link rel="stylesheet" href="styles/3a02583f.main.css">
 </head>
   <body ng-app="PersonalWebsiteAngularApp">
     <!--[if lt IE 7]>
@@ -27,7 +27,7 @@
     <div class="container">
         <navigation></navigation>
         <div class="col-md-12" style="padding:0">
-            <img src="images/home-banner.JPG" alt="example-image" class="img-responsive">
+            <img src="images/home-banner.JPG" alt="home-banner" class="img-responsive">
         </div>
         <div ng-view="" class="col-md-12"></div>
         <br><hr>
